Bug 27706 - select fails to update timeout on error
Summary: select fails to update timeout on error
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.33
: P1 critical
Target Milestone: 2.34
Assignee: Adhemerval Zanella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-07 10:01 UTC by Andreas Schwab
Modified: 2021-04-28 10:20 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
Project(s) to access:
ssh public key:
fweimer: security-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schwab 2021-04-07 10:01:32 UTC
When the [p]select syscall returns with an error (eg. EINTR) the timeout argument is no longer updated.
Comment 1 Andreas Schwab 2021-04-07 12:19:19 UTC
When 64-bit time_t is supported, the timeout argument is not updated at all.
Comment 2 Adhemerval Zanella 2021-04-13 13:11:39 UTC
Fixed on 2.33, I will backport to 2.32 as well.
Comment 3 Adhemerval Zanella 2021-04-13 13:13:59 UTC
My confusion, I meant fixed on 2.34 and I will backport to 2.33.
Comment 4 Florian Weimer 2021-04-28 10:20:35 UTC
commit cedbf6d5f3f70ca911176de87d6e453eeab4b7a1
Author: Adhemerval Zanella <adhemerval.zanella@linaro.org>
Date:   Thu Apr 8 07:39:32 2021 -0300

    linux: always update select timeout (BZ #27706)
    
    The timeout should be updated even on failure for time64 support.